--- a/frontend/result.html
+++ b/frontend/result.html
@@ -240,7 +240,7 @@
       <button id="collapseAll" class="btn-small">Collapse All</button>
       <button id="toggleHighlight" class="btn-small">Highlight</button>
       <button id="toggleTLDR" class="btn-small">TL;DR</button>
-      <button id="copyAll" class="btn-small">Copy Semua</button>
+      <button id="copyAll" class="btn-small">Copy All</button>
     </div>
 
     <main id="resultsContainer"></main>
@@ -572,6 +572,7 @@ loadComments();
 
 </body>
 </html>
+
 
 
 
